--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "altq-blog",
+  "name": "zzlweb-blog",
   "version": "1.0.0",
-  "author": "altq",
+  "author": "zzlweb",
   "scripts": {
     "dev": "vuepress dev src  --host \"localhost\"",
     "build": "vuepress build src"
   },
-  "repository": "https://github.com/Altq1231/altq1231.github.io.git",
+  "repository": "https://github.com/zzlweb/zzlweb.github.io.git",
   "devDependencies": {
     "@vuepress-reco/vuepress-plugin-kan-ban-niang": "^1.0.5",
     "@vuepress/plugin-pwa": "^1.9.5",
